--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "mdbreact": "5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.6",
-    "react-toastify": "^5.5.0"
+    "react-toastify": "^5.5.0",
+    "redux": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
